@@ -1,6 +1,4 @@
 /*
- * Copyright 2012 Google Inc. All Rights Reserved.
- *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -19,13 +17,17 @@ package com.google.devtools.j2objc;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 import com.google.common.io.Files;
 import com.google.common.io.Resources;
+import com.google.devtools.j2objc.gen.GenerationUnit;
 import com.google.devtools.j2objc.util.ErrorUtil;
+import com.google.devtools.j2objc.util.ExternalAnnotations;
 import com.google.devtools.j2objc.util.FileUtil;
 import com.google.devtools.j2objc.util.HeaderMap;
 import com.google.devtools.j2objc.util.Mappings;
+import com.google.devtools.j2objc.util.NameTable;
 import com.google.devtools.j2objc.util.PackageInfoLookup;
 import com.google.devtools.j2objc.util.PackagePrefixes;
 import com.google.devtools.j2objc.util.SourceVersion;
@@ -36,6 +38,8 @@ import java.net.URL;
 import java.nio.charset.UnsupportedCharsetException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.EnumSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Properties;
@@ -43,6 +47,7 @@ import java.util.Set;
 import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.regex.Pattern;
 
 /**
  * The set of tool properties, initialized by the command-line arguments.
@@ -64,16 +69,16 @@ public class Options {
   private boolean segmentedHeaders = true;
   private boolean jsniWarnings = true;
   private boolean buildClosure = false;
-  private boolean stripReflection = false;
-  private boolean stripEnumConstants = false;
+  private EnumSet<MetadataSupport> includedMetadata =
+      EnumSet.of(
+          MetadataSupport.FULL, MetadataSupport.ENUM_CONSTANTS, MetadataSupport.NAME_MAPPING);
   private boolean emitWrapperMethods = true;
   private boolean extractUnsequencedModifications = true;
   private boolean docCommentsEnabled = false;
   private boolean staticAccessorMethods = false;
-  private int batchTranslateMaximum = -1;
+  private boolean classProperties = false;
   private String processors = null;
   private boolean disallowInheritedConstructors = true;
-  private boolean swiftFriendly = false;
   private boolean nullability = false;
   private TimingLevel timingLevel = TimingLevel.NONE;
   private boolean dumpAST = false;
@@ -82,13 +87,17 @@ public class Options {
   private boolean translateBootclasspath = false;
   private boolean translateClassfiles = false;
   private String annotationsJar = null;
-  private String globalCombinedOutput = null;
+  private CombinedOutput globalCombinedOutput = null;
   private String bootclasspath = null;
+  private boolean emitKytheMappings = false;
+  private boolean emitSourceHeaders = true;
 
   private Mappings mappings = new Mappings();
   private FileUtil fileUtil = new FileUtil();
   private PackageInfoLookup packageInfoLookup = new PackageInfoLookup(fileUtil);
   private PackagePrefixes packagePrefixes = new PackagePrefixes(packageInfoLookup);
+  private final ExternalAnnotations externalAnnotations = new ExternalAnnotations();
+  private final List<String> entryClasses = new ArrayList<>();
 
   private SourceVersion sourceVersion = SourceVersion.defaultVersion();
 
@@ -103,13 +112,18 @@ public class Options {
   private static final String HELP_MSG_KEY = "help-message";
   private static final String X_HELP_MSG_KEY = "x-help-message";
   private static final String XBOOTCLASSPATH = "-Xbootclasspath:";
-  private static final String BATCH_PROCESSING_MAX_FLAG = "--batch-translate-max=";
   private static final String TIMING_INFO_ARG = "--timing-info";
+
+  private static final Pattern KNOWN_FILE_SUFFIX_PATTERN
+      = Pattern.compile(".*\\.(java|class|jar|zip)");
 
   // TODO(tball): remove obsolete flags once projects stop using them.
   private static final Set<String> obsoleteFlags = Sets.newHashSet(
+    "--batch-translate-max",
     "--disallow-inherited-constructors",
+    "--extract-unsequenced",
     "--final-methods-as-functions",
+    "--jsni-warnings",
     "--no-final-methods-functions",
     "--hide-private-members",
     "--no-hide-private-members",
@@ -118,6 +132,96 @@ public class Options {
     "--quiet",
     "-Xforce-incomplete-java8"
   );
+  private static final String BATCH_PROCESSING_MAX_FLAG = "--batch-translate-max=";
+
+  /**
+   * Types of memory management to be used by translated code.
+   */
+  public enum MemoryManagementOption { REFERENCE_COUNTING, ARC }
+
+  /**
+   * What languages can be generated.
+   */
+  public enum OutputLanguageOption {
+    OBJECTIVE_C(".m", ".h"),
+    OBJECTIVE_CPLUSPLUS(".mm", ".h"),
+
+    // Test-only language option, for A/B test comparisons.
+    TEST_OBJECTIVE_C(".m2", ".h2");
+
+    private final String suffix;
+    private final String headerSuffix;
+
+    OutputLanguageOption(String suffix, String headerSuffix) {
+      this.suffix = suffix;
+      this.headerSuffix = headerSuffix;
+    }
+
+    public String suffix() {
+      return suffix;
+    }
+
+    public String headerSuffix() {
+      return headerSuffix;
+    }
+  }
+
+  /**
+   * What timing information should be printed, if any.
+   */
+  public enum TimingLevel {
+    // Don't print any timing information.
+    NONE,
+
+    // Print the total execution time at the end.
+    TOTAL,
+
+    // Print all timing information.
+    ALL
+  }
+
+  /**
+   * What reflection support should be generated, if any.
+   */
+  public enum MetadataSupport {
+    // Generate metadata for enum constants.
+    ENUM_CONSTANTS,
+
+    // Generate name mapping.
+    NAME_MAPPING,
+
+    // Generate all metadata.
+    FULL
+  }
+
+  /**
+   * Class that holds the information needed to generate combined output, so that all output goes to
+   * a single, named .h/.m file set.
+   */
+  public static class CombinedOutput {
+
+    private final String outputName;
+    private final GenerationUnit combinedUnit;
+
+    CombinedOutput(String outputName, Options options) {
+      this.outputName = outputName;
+      this.combinedUnit = GenerationUnit.newCombinedJarUnit(outputName, options);
+    }
+
+    public String globalCombinedOutputName() {
+      return outputName;
+    }
+
+    public GenerationUnit globalGenerationUnit() {
+      return combinedUnit;
+    }
+  }
+
+  // Flags that are directly forwarded to the javac parser.
+  private static final ImmutableSet<String> EXTRA_JAVAC_PARSER_FLAGS =
+      ImmutableSet.of("--patch-module", "--system", "--add-reads");
+  private final List<String> extraJavacParserFlags = new ArrayList<>();
+
 
   static {
     // Load string resources.
@@ -144,49 +248,12 @@ public class Options {
     }
   }
 
-  public String globalCombinedOutput() {
+  public CombinedOutput globalCombinedOutput() {
     return globalCombinedOutput;
   }
 
-  public void setGlobalCombinedOutput(String globalCombinedOutput) {
-    this.globalCombinedOutput = globalCombinedOutput;
-  }
-
-  /**
-   * Types of memory management to be used by translated code.
-   */
-  public static enum MemoryManagementOption { REFERENCE_COUNTING, ARC }
-
-  /**
-   * What languages can be generated.
-   */
-  public static enum OutputLanguageOption {
-    OBJECTIVE_C(".m"),
-    OBJECTIVE_CPLUSPLUS(".mm");
-
-    private final String suffix;
-
-    OutputLanguageOption(String suffix) {
-      this.suffix = suffix;
-    }
-
-    public String suffix() {
-      return suffix;
-    }
-  }
-
-  /**
-   * What timing information should be printed, if any.
-   */
-  public enum TimingLevel {
-    // Don't print any timing information.
-    NONE,
-
-    // Print the total execution time at the end.
-    TOTAL,
-
-    // Print all timing information.
-    ALL
+  public void setGlobalCombinedOutput(String outputName) {
+    this.globalCombinedOutput = new CombinedOutput(outputName, this);
   }
 
   /**
@@ -238,7 +305,7 @@ public class Options {
         usage("no @ file specified");
       }
       File f = new File(filename);
-      String fileArgs = Files.toString(f, fileUtil.getCharset());
+      String fileArgs = Files.asCharSource(f, fileUtil.getCharset()).read();
       // Simple split on any whitespace, quoted values aren't supported.
       processArgs(fileArgs.split("\\s+"));
     }
@@ -337,9 +404,43 @@ public class Options {
       } else if (arg.equals("--strip-gwt-incompatible")) {
         stripGwtIncompatible = true;
       } else if (arg.equals("--strip-reflection")) {
-        stripReflection = true;
+        includedMetadata = EnumSet.of(MetadataSupport.ENUM_CONSTANTS);
       } else if (arg.equals("-Xstrip-enum-constants")) {
-        stripEnumConstants = true;
+        includedMetadata.remove(MetadataSupport.ENUM_CONSTANTS);
+      } else if (arg.startsWith("--reflection:")) {
+        includedMetadata.remove(MetadataSupport.FULL);
+        String[] subArgs = arg.substring(arg.indexOf(':') + 1).split(",", -1);
+        for (String subArg : subArgs) {
+          switch (subArg) {
+            case "all": {
+              includedMetadata = EnumSet.allOf(MetadataSupport.class);
+              break;
+            }
+            case "none": {
+              includedMetadata = EnumSet.noneOf(MetadataSupport.class);
+              break;
+            }
+            case "enum-constants": {
+              includedMetadata.add(MetadataSupport.ENUM_CONSTANTS);
+              break;
+            }
+            case "-enum-constants": {
+              includedMetadata.remove(MetadataSupport.ENUM_CONSTANTS);
+              break;
+            }
+            case "name-mapping": {
+              includedMetadata.add(MetadataSupport.NAME_MAPPING);
+              break;
+            }
+            case "-name-mapping": {
+              includedMetadata.remove(MetadataSupport.NAME_MAPPING);
+              break;
+            }
+            default: {
+              usage("invalid --reflection argument: " + subArg);
+            }
+          }
+        }
       } else if (arg.equals("--no-wrapper-methods")) {
         emitWrapperMethods = false;
       } else if (arg.equals("--no-segmented-headers")) {
@@ -354,13 +455,12 @@ public class Options {
         docCommentsEnabled = true;
       } else if (arg.equals("--doc-comment-warnings")) {
         reportJavadocWarnings = true;
-      } else if (arg.startsWith(BATCH_PROCESSING_MAX_FLAG)) {
-        batchTranslateMaximum =
-            Integer.parseInt(arg.substring(BATCH_PROCESSING_MAX_FLAG.length()));
       } else if (arg.equals("--static-accessor-methods")) {
         staticAccessorMethods = true;
+      } else if (arg.equals("--class-properties")) {
+        setClassProperties(true);
       } else if (arg.equals("--swift-friendly")) {
-        swiftFriendly = true;
+        setSwiftFriendly(true);
       } else if (arg.equals("-processor")) {
         processors = getArgValue(args, arg);
       } else if (arg.equals("--allow-inherited-constructors")) {
@@ -377,6 +477,12 @@ public class Options {
         translateClassfiles = true;
       } else if (arg.equals("-Xannotations-jar")) {
         annotationsJar = getArgValue(args, arg);
+      } else if (arg.equals("-Xkythe-mapping")) {
+        emitKytheMappings = true;
+      } else if (arg.equals("-Xno-source-headers")) {
+        emitSourceHeaders = false;
+      } else if (arg.equals("-Xexternal-annotation-file")) {
+        addExternalAnnotationFile(getArgValue(args, arg));
       } else if (arg.equals("-version")) {
         version();
       } else if (arg.startsWith("-h") || arg.equals("--help")) {
@@ -393,16 +499,28 @@ public class Options {
             ErrorUtil.warning("Java 9 source version is not supported, using Java 8.");
             sourceVersion = SourceVersion.JAVA_8;
           }
+          // TODO(tball): remove when Java 10 source is supported.
+          if (sourceVersion == SourceVersion.JAVA_10) {
+            ErrorUtil.warning("Java 10 source version is not supported, using Java 8.");
+            sourceVersion = SourceVersion.JAVA_8;
+          }
         } catch (IllegalArgumentException e) {
           usage("invalid source release: " + s);
         }
       } else if (arg.equals("-target")) {
         // Dummy out passed target argument, since we don't care about target.
         getArgValue(args, arg);  // ignore
+      } else if (EXTRA_JAVAC_PARSER_FLAGS.contains(arg)) {
+        addExtraJavacParserFlags(arg, getArgValue(args, arg));
+      } else if (arg.startsWith(BATCH_PROCESSING_MAX_FLAG)) {
+        // Ignore, batch processing isn't used with javac front-end.
       } else if (obsoleteFlags.contains(arg)) {
         // also ignore
       } else if (arg.startsWith("-")) {
         usage("invalid flag: " + arg);
+      } else if (NameTable.isValidClassName(arg) && !hasKnownFileSuffix(arg)) {
+        // TODO(tball): document entry classes when build is updated to Bazel.
+        entryClasses.add(arg);
       } else {
         sourceFiles.add(arg);
       }
@@ -431,19 +549,14 @@ public class Options {
           + "-XincludeGeneratedSources");
     }
 
+    // Entry classes are only allowed with --build-closure flag.
+    if (!entryClasses.isEmpty() && !buildClosure) {
+      ErrorUtil.error("entry class names can only be specified with --build-closure flag");
+    }
+
     if (memoryManagementOption == null) {
       memoryManagementOption = MemoryManagementOption.REFERENCE_COUNTING;
     }
-
-    if (swiftFriendly) {
-      staticAccessorMethods = true;
-      nullability = true;
-    }
-
-    // javac performs best when all sources are compiled by one task.
-    // TODO(kstanger): This renders the --batch-translate-max flag useless. It was previously useful
-    // for tuning the JDT parser. We may want to clean and simplify our batching code now.
-    batchTranslateMaximum = Integer.MAX_VALUE;
 
     if (bootclasspath == null) {
       // Set jre_emul.jar as bootclasspath, if available. This ensures that source files
@@ -460,6 +573,10 @@ public class Options {
       // Fall back to Java 8 and earlier property.
       bootclasspath = System.getProperty("sun.boot.class.path", "");
     }
+  }
+
+  private boolean hasKnownFileSuffix(String s) {
+    return KNOWN_FILE_SUFFIX_PATTERN.matcher(s).matches();
   }
 
   /**
@@ -666,21 +783,48 @@ public class Options {
   }
 
   public boolean stripReflection() {
-    return stripReflection;
+    return !includedMetadata.contains(MetadataSupport.FULL);
   }
 
   @VisibleForTesting
   public void setStripReflection(boolean b) {
-    stripReflection = b;
+    if (b) {
+      includedMetadata.remove(MetadataSupport.FULL);
+      includedMetadata.remove(MetadataSupport.NAME_MAPPING);
+    } else {
+      includedMetadata = EnumSet.allOf(MetadataSupport.class);
+    }
   }
 
   public boolean stripEnumConstants() {
-    return stripEnumConstants;
+    return !includedMetadata.contains(MetadataSupport.ENUM_CONSTANTS);
   }
 
   @VisibleForTesting
   public void setStripEnumConstants(boolean b) {
-    stripEnumConstants = b;
+    if (b) {
+      includedMetadata.remove(MetadataSupport.ENUM_CONSTANTS);
+    } else {
+      includedMetadata.add(MetadataSupport.ENUM_CONSTANTS);
+    }
+  }
+
+  public boolean stripNameMapping() {
+    return !includedMetadata.contains(MetadataSupport.NAME_MAPPING);
+  }
+
+  @VisibleForTesting
+  public void setStripNameMapping(boolean b) {
+    if (b) {
+      includedMetadata.remove(MetadataSupport.NAME_MAPPING);
+    } else {
+      includedMetadata.add(MetadataSupport.NAME_MAPPING);
+    }
+  }
+
+  @VisibleForTesting
+  public void setStripAllReflection() {
+    includedMetadata = EnumSet.noneOf(MetadataSupport.class);
   }
 
   public boolean emitWrapperMethods() {
@@ -701,14 +845,6 @@ public class Options {
     extractUnsequencedModifications = true;
   }
 
-  public int batchTranslateMaximum() {
-    return batchTranslateMaximum;
-  }
-
-  @VisibleForTesting
-  public void setBatchTranslateMaximum(int max) {
-    batchTranslateMaximum = max;
-  }
 
   public SourceVersion getSourceVersion(){
     return sourceVersion;
@@ -725,6 +861,16 @@ public class Options {
 
   @VisibleForTesting
   public void setStaticAccessorMethods(boolean b) {
+    staticAccessorMethods = b;
+  }
+
+  public boolean classProperties() {
+    return classProperties;
+  }
+
+  @VisibleForTesting
+  public void setClassProperties(boolean b) {
+    classProperties = b;
     staticAccessorMethods = b;
   }
 
@@ -746,15 +892,10 @@ public class Options {
     disallowInheritedConstructors = b;
   }
 
-  public boolean swiftFriendly() {
-    return swiftFriendly;
-  }
-
   @VisibleForTesting
   public void setSwiftFriendly(boolean b) {
-    swiftFriendly = b;
-    staticAccessorMethods = b;
-    nullability = b;
+    setClassProperties(b);
+    setNullability(b);
   }
 
   public boolean nullability() {
@@ -786,6 +927,38 @@ public class Options {
     return translateBootclasspath;
   }
 
+  public boolean emitKytheMappings() {
+    return emitKytheMappings;
+  }
+
+  @VisibleForTesting
+  public void setEmitKytheMappings(boolean b) {
+    emitKytheMappings = b;
+  }
+
+  public boolean emitSourceHeaders() {
+    return emitSourceHeaders;
+  }
+
+  @VisibleForTesting
+  public void setEmitSourceHeaders(boolean b) {
+    emitSourceHeaders = b;
+  }
+
+  public ExternalAnnotations externalAnnotations() {
+    return externalAnnotations;
+  }
+
+  @VisibleForTesting
+  public void addExternalAnnotationFile(String file) throws IOException {
+    externalAnnotations.addExternalAnnotationFile(file);
+  }
+
+  @VisibleForTesting
+  public void addExternalAnnotationFileContents(String fileContents) throws IOException {
+    externalAnnotations.addExternalAnnotationFileContents(fileContents);
+  }
+
   // Unreleased experimental project.
   public boolean translateClassfiles() {
     return translateClassfiles;
@@ -794,5 +967,17 @@ public class Options {
   @VisibleForTesting
   public void setTranslateClassfiles(boolean b) {
     translateClassfiles = b;
+  }
+
+  public List<String> entryClasses() {
+    return entryClasses;
+  }
+
+  public void addExtraJavacParserFlags(String... flags) {
+    Collections.addAll(extraJavacParserFlags, flags);
+  }
+
+  public List<String> getExtraJavacParserFlags() {
+    return extraJavacParserFlags;
   }
 }
